[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/AudioManager.gd" type="Script" id=1]

[node name="Audio" type="Node"]
script = ExtResource( 1 )

[node name="doorcreak1" type="AudioStreamPlayer" parent="."]

[node name="doorcreak2" type="AudioStreamPlayer" parent="."]

[node name="doorcreak3" type="AudioStreamPlayer" parent="."]

[node name="clang" type="AudioStreamPlayer" parent="."]

[node name="eerie" type="AudioStreamPlayer" parent="."]
volume_db = 4.0
